fixed issue where the top nav links were unclickable on small height screens

--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ nav img:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
+  pointer-events: none;
 }
 .text-box h1 {
   font-size: 69px;
